<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingBottom="64dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="360dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:layout_marginRight="56dp"
                        android:layout_marginTop="16dp"
                        android:textColorHint="@color/grey_500">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:maxLength="@integer/email_length"
                            android:textColor="@color/grey_700"
                            android:textColorHint="@color/grey_500" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:layout_marginRight="56dp"
                        android:layout_marginTop="8dp"
                        android:textColorHint="@color/grey_500">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:maxLength="@integer/max_text_length"
                            android:textColor="@color/grey_700"
                            android:textColorHint="@color/grey_500" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_forgot_password"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:layout_marginLeft="48dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/str_forgot_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="58dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_no_account"
                        android:textColor="@color/grey_500"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_sign_up"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/str_register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

            </FrameLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/sign_in_ll"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="bottom"
            android:background="@color/grey_400"
            android:gravity="end|center_vertical">

            <Button
                android:id="@+id/btn_sign_in"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:enabled="false"
                android:text="@string/str_sign_in"
                android:textColor="@color/grey_500"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>